[tool.poetry]
name = "celebration-card-python"
version = "0.1.0"
description = ""
authors = ["Antonio Leme <antonio.lj.junior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
fastapi = "^0.85.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
tinydb = "^4.7.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "22.12.0"
flake8 = "^5.0.4"
isort = "^5.2.2"
pytest = "^7"
pytest-cov = "^4"
starlette = "^0.20.4"
httpx = "^0.23.3"
dependency-injector = "^4.41.0"
mypy = "^1.0.1"

[tool.black]
line-length = 79
target-version = [ 'py38' ]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
    | _build
  )
)
'''

[tool.isort]
line_length = 79
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
